<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/fourth_tip"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fourth_take_photo" />

    <TextView
        android:id="@+id/text_no_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/fourth_no_photo"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/image_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:contentDescription="@string/fourth_photo_desc"
        android:scaleType="fitCenter"
        android:visibility="gone" />

</LinearLayout>
