<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/third_tip"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/third_hint"
        android:inputType="text"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/third_confirm" />

</LinearLayout>
